--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
+    "version": 2,
     "builds": [
-      { "src": "server.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/server.js" }
+      {
+        "src": "server.js",
+        "use": "@vercel/node",
+        "config": {
+          "timeout": 30
+        }
+      }
     ]
   }
