--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,20 @@
 {
+    "version": 2,
     "builds": [
-      { "src": "server.js", "use": "@vercel/node" }
+      {
+        "src": "server.js",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/server.js" }
+      {
+        "src": "/(.*)",
+        "dest": "/server.js",
+        "headers": { "cache-control": "s-maxage=1, stale-while-revalidate" },
+        "methods": ["GET", "POST", "PUT", "DELETE"],
+        "config": {
+          "timeout": 30
+        }
+      }
     ]
   }
