--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/server.js",
+        "dest": "./server.js",
         "headers": { "cache-control": "s-maxage=1, stale-while-revalidate" },
         "methods": ["GET", "POST", "PUT", "DELETE"],
         "config": {
